--- a/assets/AssetManifest.json
+++ b/assets/AssetManifest.json
@@ -1,1 +1,1 @@
-{"assets/images/app_icon.png":["assets/images/app_icon.png"],"assets/images/image.jpg":["assets/images/image.jpg"],"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"]}
+{"assets/images/app_icon.png":["assets/images/app_icon.png"],"assets/images/image.jpg":["assets/images/image.jpg"],"assets/images/image.png":["assets/images/image.png"],"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"]}
